--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "hotrestaurant",
-  "version": "1.0.1",
-  "description": "",
+  "name": "note-taker",
+  "version": "1.0.0",
+  "description": "Helps you find the characters you are looking for",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server.js"
-  },
-  "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+     "express": "^4.16.3",
+     "uuid": "^3.4.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
